--- a/ps-full.html
+++ b/ps-full.html
@@ -68,7 +68,7 @@
 
       // We'll need a couple of things to get started from PactSafe.
       var siteAccessId = '474d8f60-44af-440a-8b15-fbabdceb8a95'; // A PactSafe Site Access ID
-      var groupKey = "group-h1bqazlad"; // A PactSafe Group Key.
+      var groupKey = "group-bk4x0-ucv"; // A PactSafe Group Key.
 
       // Creates a Site object with the a PactSafe Site Access ID.
       _ps('create', siteAccessId);
